  * Update localedata/locales_CH.diff
  * Update localedata/supported.diff
  * Update localedata/locale-hy_AM.diff
  * Update localedata/locale-csb_PL.diff
  * Update localedata/dz_BT-collation.diff
  * Update localedata/locale-ia.diff
  * Update localedata/locales-sr.diff
  * Update localedata/tailor-iso14651_t1.diff
  * Update localedata/fix-lang.diff
  * Update localedata/first_weekday.diff

 -- Aurelien Jarno <aurel32@debian.org>  Wed,  7 Feb 2007 13:56:40 +0100

glibc (2.4-1) UNRELEASED; urgency=low

  * New upstream version 2.4:
    - NPTL is used instead of linuxthreads on alpha.  Closes: #325600.
    - NPTL being the default thread library when available, only one
      version of the thread library is available (either linuxthreads or
      NPTL).  Closes: #399035.
    - .eh_frame has been fixed.  Closes: #349688.
    - Fix a memory leak in getprotobyname. Closes: #365233.
    - Support for MALLOC_PERTURB has been added.  Closes: #350579.
    - Support for 2.4 kernels has been removed.  Closes: #258740.

  [ Clint Adams ]
  * Remove all/cvs-manual-memory.diff (merged upstream).
  * Remove all/cvs-manual-string.diff (merged upstream).
  * Remove any/cvs-divdi3-moddi3.diff (merged upstream).
  * Remove any/cvs-errlist.diff (merged upstream).
  * Remove any/cvs-siginfo_h.diff (merged upstream).
  * Remove any/cvs-regcomp_c.diff (merged upstream).
  * Remove any/cvs-tst-setcontext_c.diff (merged upstream).
  * Remove any/local-dash.diff (merged upstream).
  * Remove any/local-gcc4-elf.diff (merged upstream).
  * Remove powerpc/cvs-executable-got.diff (merged upstream).
  * Remove sparc/cvs-datastart.diff (merged upstream).
  * Remove sparc/cvs-gcc4-inline.diff (merged upstream).
  * Remove sparc/local-gcc4-mv8.diff (merged upstream).
  * Remove sparc/submitted-socket-weakalias.diff (merged upstream).
  * Remove everything to do with nscd_nischeck.
  * Remove any/local-linuxthreads-sizefix.diff (not necessary anymore).
  * Update hppa/submitted-lt.diff.